--- a/style/style.css
+++ b/style/style.css
@@ -254,7 +254,7 @@ footer a:hover {
     background-color: #fff;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-    padding: 15px;
+    padding: 20px;
     text-align: center;
     transition: transform 0.3s;
 }
@@ -263,22 +263,16 @@ footer a:hover {
     transform: scale(1.05);
 }
 
-.card img {
-    width: 100%;
-    height: auto;
-    border-radius: 6px;
-    margin-bottom: 15px;
-}
 
 .card h3 {
     font-size: 1.2rem;
-    margin-bottom: 8px;
+    margin-bottom: 10px;
 }
 
 .card .precio {
-    font-weight: bold;
-    color: #007bff;
-    margin-bottom: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #333;
 }
 
 .card p {
@@ -302,4 +296,16 @@ footer a:hover {
 
 .card .btn:hover {
     background-color: #ffbf00;
+}
+
+.imagen-referencia {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.imagen-referencia img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
