--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,3 @@
-/* Reset básico */
 * {
   margin: 0;
   padding: 0;
@@ -298,14 +297,115 @@ footer a:hover {
     background-color: #ffbf00;
 }
 
-.imagen-referencia {
-  text-align: center;
-  margin-bottom: 20px;
+/* SECCION 1 */
+.banner-horizontal img {
+  width: 100%;
+  max-height: 250px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin: 15px 0 25px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
 }
 
-.imagen-referencia img {
-  max-width: 100%;
-  height: auto;
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+.texto-productos .card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
+
+.texto-productos .card h3 {
+  font-size: 1.2rem;
+  margin-bottom: 8px;
+}
+
+.texto-productos .precio {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 6px;
+}
+
+.texto-productos .card p {
+  margin-bottom: 10px;
+}
+
+.texto-productos .btn {
+  margin-top: auto;
+}
+
+.productos-limpieza {
+  margin-bottom: 50px;
+}
+
+.grid-container {
+  gap: 25px;
+}
+
+.card img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 6px;
+  margin-bottom: 15px;
+}
+body {
+  background-image: url('https://img.freepik.com/fotos-premium/fondo-pared-blanca-foco_28504-64.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+}
+
+.productos-limpieza h3 {
+  font-size: 1.6rem;
+  font-weight: bold;
+  color: #444;
+  margin: 35px 0 20px;
+  text-align:center;
+}
+
+.petshop-bg {
+  background-image: url('https://img.freepik.com/vector-gratis/marco-vector-perros-sobre-fondo-blanco_53876-127700.jpg');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+}
+
+/* Contenedor flotante */
+.social-floating {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 9999;
+}
+
+.float-btn {
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  background-color: #fff;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: transform 0.3s ease, background-color 0.3s ease;
+}
+
+.float-btn img {
+  width: 28px;
+  height: 28px;
+}
+
+.float-btn.whatsapp:hover {
+  background-color: #25D366;
+}
+
+.float-btn.instagram:hover {
+  background-color: #E1306C;
+}
+
+
